# triplethreading

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/triplethreading/: __init__.py
src/triplethreading/differential/: discrete.py
src/triplethreading/distributions/: __init__.py  cvdistributions.py
src/triplethreading/matrix/: __init__.py  elementary.py
