[project]
name = "triplethreading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "triplethreading", email = "triplethreading@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[tool.maturin]
module-name = "triplethreading._core"
python-packages = ["triplethreading"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
