[project]
name = "triplethreading"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "triplethreading", email = "triplethreading@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "auditwheel>=6.4.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "patchelf>=0.17.2.4",
    "twine>=6.1.0",
]

[tool.maturin]
module-name = "triplethreading._core"
python-packages = ["triplethreading"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
